# media-researcher

./: .env.example  .gitignore  README.md  SKILL.md
briefs/: ai_infrastructure.yaml  climate_tech.yaml  fintech_startup.yaml
media-researcher-core/: README.md  pyproject.toml
media-researcher-core/media_researcher_core/: __init__.py  brief.py  cache.py  cli.py  config.py  models.py  runner.py
media-researcher-core/media_researcher_core/discovery/: __init__.py  base.py  journalists.py  podcasts.py  publications.py  xai_discovery.py
media-researcher-core/media_researcher_core/enrichment/: __init__.py  enricher.py  xai_enricher.py
media-researcher-core/media_researcher_core/output/: __init__.py  csv_formatter.py  json_formatter.py  markdown_formatter.py  notion_formatter.py
media-researcher-core/media_researcher_core/outreach/: __init__.py  tinyfish_sender.py
media-researcher-core/media_researcher_core/scoring/: __init__.py  scorer.py
media-researcher-core/tests/: test_scoring.py  test_xai.py
